--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,52 +18,35 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # --- Build PDF from LaTeX in repo root ---
+      # --- 1. Build PDF (Uses the high-quality LaTeX container) ---
       - name: Compile LaTeX to PDF
         uses: xu-cheng/latex-action@v3
         with:
           root_file: resume.tex
           latexmk_use_xelatex: true
 
-      # --- Install TeX4ht tools (htlatex) for HTML build ---
-      - name: Install TeX4ht (htlatex)
+      # --- 2. Build HTML (Uses Pandoc - Fast & Pre-installed) ---
+      - name: Compile LaTeX to HTML via Pandoc
         run: |
-          sudo apt-get update
-          sudo apt-get install -y tex4ht texlive texlive-latex-extra
-          command -v htlatex
-
-      # --- Build HTML in a writable folder ---
-      - name: Compile LaTeX to HTML (in site/)
-        run: |
-          rm -rf site
           mkdir -p site
-          cp resume.tex site/
+          # Pandoc handles fontawesome and standard packages gracefully
+          pandoc resume.tex -s -o site/index.html
+          
+          # Copy the PDF into the site folder so it's downloadable
+          cp resume.pdf site/resume.pdf
 
-          cd site
-          htlatex resume.tex "html5" " -cunihtf -utf8"
-
-          # Pages entry point
-          if [ -f resume.html ]; then
-            cp resume.html index.html
-          elif [ -f resume.htm ]; then
-            cp resume.htm index.html
-          fi
-
-          # Put the PDF in the site folder too
-          cp ../resume.pdf ./resume.pdf
-
-      # --- Commit resume.pdf back to main (optional) ---
+      # --- 3. Commit PDF back to main branch ---
+      # This ensures your repo always shows the latest PDF
       - name: Commit PDF back to repo
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add resume.pdf
-          git diff --cached --quiet && exit 0
-          git commit -m "Auto-update resume PDF"
-          git push
+          git diff --cached --quiet || (git commit -m "Auto-update resume PDF" && git push)
 
-      # --- Deploy HTML to gh-pages branch ---
-      - name: Deploy to GitHub Pages (gh-pages)
+      # --- 4. Deploy to GitHub Pages ---
+      # This hosts your resume at https://<username>.github.io/<repo>/
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
