--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,13 +25,13 @@ jobs:
           root_file: resume.tex
           latexmk_use_xelatex: true
 
-      # 2. Convert PDF to a high-quality Image (PNG) for the README
-      # We use Ghostscript which is standard on Ubuntu runners
+     # 2. Convert PDF to High-Res PNG
       - name: Convert PDF to PNG Preview
         run: |
           sudo apt-get update
           sudo apt-get install -y ghostscript
-          gs -dNOPAUSE -sDEVICE=png16m -r150 -dFirstPage=1 -dLastPage=1 -sOutputFile=resume-preview.png -dBATCH resume.pdf
+          # -r300 makes the text crisp on high-res screens
+          gs -dNOPAUSE -sDEVICE=png16m -r300 -dFirstPage=1 -dLastPage=1 -sOutputFile=resume-preview.png -dBATCH resume.pdf
 
       # 3. Prepare the site folder for GitHub Pages
       - name: Prepare Site Folder
@@ -40,20 +40,16 @@ jobs:
           cp resume.pdf site/
           # Create a simple HTML index that displays the PDF
           echo "<html><head><title>Resume</title></head><body style='margin:0'><embed src='resume.pdf' width='100%' height='100%'></body></html>" > site/index.html
-
-      # 4. Commit the PDF and PNG back to your main branch
+# 4. Commit with the Pull-Rebase fix
       - name: Commit Updated Files
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add resume.pdf resume-preview.png
-          
-          # Check if there are actually changes to commit
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
             git commit -m "Auto-update resume and preview image"
-            # Pull latest changes to avoid "rejected" error, then push
             git pull --rebase origin main
             git push origin main
           fi
